Adding a comment in n8.css

--- a/source/n8style.css
+++ b/source/n8style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 *{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; /*This is used mainly if the device doesn't have a specific font to have the browser try with another and if you put the type of the font (in this example sans-serif), the device will try the first sans-serif font it has available.(same for serif, monospace, handwriting, display)*/
 }
 
 body {
