--- a/source/n10.css
+++ b/source/n10.css
@@ -6,12 +6,12 @@ class: .
 */
 
 body {
-    background-color: rgba(172, 255, 47, 0.584);
+    background-color: rgba(0, 255, 255, 0.703);
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    color: rgb(3, 158, 3);
+    color: rgb(3, 83, 158);
 }
 
 h1#principal {
@@ -19,5 +19,5 @@ h1#principal {
 }
 
 h2 {
-    color: green;
+    color: blue;
 }
