--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -1,1 +1,54 @@
 @charset "UTF-8";
+@font-face {
+    font-family: 'Idroid';
+    src: url('fonts/idroid.otf') format('opentype');
+}
+
+body{
+    margin: 0px;
+}
+
+header{
+    background-color: #3FD95F;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding-bottom: 5px;
+}
+
+header > h1 {
+    margin: 0px;
+    padding-top: 10px;
+    text-align: center;
+    font-family: Idroid, sans-serif;
+    font-size: 40px;
+}
+
+header > h2 {
+    margin: 0px;
+    padding: 3px 0px 20px 0px;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 14px;
+}
+
+section > div {
+    display: inline;
+    padding: 10px 1px 5px 10px;
+    font-family: Idroid, sans-serif;
+}
+
+section > div#home {
+    margin-left: 10px;
+}
+
+section > div#fc {
+    padding-right: 8px;
+}
+
+section > div:hover{
+    display: inline;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    background-color: #49FCA0;
+    
+}
