--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -4,15 +4,16 @@
     src: url('fonts/idroid.otf') format('opentype');
 }
 
-body{
+body, p{
     margin: 0px;
 }
 
 header{
-    background-color: #3FD95F;
+    /* background-color: #3FD95F; */
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
     padding-bottom: 5px;
+    background-image: linear-gradient(to bottom, #3FD95F, #2a8a3d);
 }
 
 header > h1 {
@@ -38,7 +39,7 @@ section > div {
 }
 
 section > div#home {
-    margin-left: 10px;
+    margin-left: 16px;
 }
 
 section > div#fc {
@@ -51,4 +52,22 @@ section > div:hover{
     border-top-right-radius: 10px;
     background-color: #49FCA0;
     
+}
+
+footer {
+    background-image: linear-gradient(to bottom, #2a8a3d,black,black,black, black);
+    border-top:1px solid black;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    color: white;
+    font-family: sans-serif;
+}
+
+footer > div {
+    font-family: Idroid, sans-serif;
+}
+
+footer > div#content {
+    font-size: 10px;
+    padding: 40px 0px 30px 0px;
 }
