--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -64,10 +64,29 @@ footer {
 }
 
 footer > div {
-    font-family: Idroid, sans-serif;
+    font-family: sans-serif;
 }
 
+div#social{
+    padding-top: 30px;
+    text-align: center;
+}
+
+.logo{
+    display: inline-block;
+    padding-right: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30px;
+}
+
+
 footer > div#content {
+    font-family: Idroid, sans-serif;
     font-size: 10px;
-    padding: 40px 0px 30px 0px;
+    padding: 15px 0px 10px 0px;
+}
+
+div#content > p{
+    text-align: center;
 }
