--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -6,6 +6,7 @@
 
 body, p{
     margin: 0px;
+    background-color: #87e187c3;
 }
 
 /*header----------------------------------------------------------------------------------------------------*/
@@ -56,7 +57,28 @@ section > div:hover{
 }
 /*main----------------------------------------------------------------------------------------------------*/
 main {
-    border: 5px solid #2a8a3d;
+    background-color: white;
+    margin-right: 50px;
+    margin-left: 50px;
+    padding: 10px;
+    /* border: 5px solid #32A832; */
+    font-family: sans-serif;
+    
+}
+
+h3#first {
+    margin-top: 0px;
+    font-size: 30px;
+    font-family: Idroid, sans-serif;
+}
+
+section > h3 {
+    margin-bottom: 10px;
+    font-family: Idroid, sans-serif;
+}
+
+section > p, main > p {
+    background-color: white;
 }
 
 /*footer----------------------------------------------------------------------------------------------------*/
@@ -92,4 +114,5 @@ footer > div#content {
 
 div#content > p{
     text-align: center;
+    background-color: black;
 }
