--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -16,6 +16,7 @@ header{
     border-bottom-left-radius: 5px;
     padding-bottom: 5px;
     background-image: linear-gradient(to bottom, #3FD95F, #2a8a3d);
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.405);
 }
 
 header > h1 {
@@ -62,7 +63,7 @@ main {
     margin-left: 50px;
     margin-bottom: 20px;
     width: auto;
-    padding: 10px;
+    padding: 20px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px ;
     font-family: sans-serif;
@@ -72,6 +73,7 @@ main {
 h3#first {
     background-color: white;
     margin-top: 0px;
+    margin-bottom: 20px;
     font-size: 27px;
     font-family: Idroid, sans-serif;
 }
