--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -4,26 +4,37 @@
     src: url('fonts/idroid.otf') format('opentype');
 }
 
+:root { /*Variables*/
+    --color1:#87e187c3;
+    --color2: #3FD95F;
+    --color3: #2a8a3d;
+    --color4:#49FCA0;
+    --colorb1: rgba(0, 0, 0, 0.405);
+    --boxcolor1: rgba(40, 82, 29, 0.616);
+    --Idroidfont: Idroid, sans-serif;
+}
+
 body, p{
     margin: 0px;
-    background-color: #87e187c3;
+    background-color: var(--color1);
+    max-width: 925px;
+    min-width: 450px;
 }
 
 /*header----------------------------------------------------------------------------------------------------*/
 header{
-    /* background-color: #3FD95F; */
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
     padding-bottom: 5px;
-    background-image: linear-gradient(to bottom, #3FD95F, #2a8a3d);
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.405);
+    background-image: linear-gradient(to bottom, var(--color2), var(--color3));
+    box-shadow: 0px 1px 5px var(--colorb1);
 }
 
 header > h1 {
     margin: 0px;
     padding-top: 10px;
     text-align: center;
-    font-family: Idroid, sans-serif;
+    font-family: var(--Idroidfont);
     font-size: 40px;
 }
 
@@ -38,7 +49,7 @@ header > h2 {
 section > div {
     display: inline;
     padding: 10px 1px 5px 10px;
-    font-family: Idroid, sans-serif;
+    font-family: var(--Idroidfont);
 }
 
 section > div#home {
@@ -53,21 +64,19 @@ section > div:hover{
     display: inline;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    background-color: #49FCA0;
+    background-color:var(--color4);
     
 }
 /*main----------------------------------------------------------------------------------------------------*/
 main {
     background-color: white;
-    margin-right: 50px;
-    margin-left: 50px;
+    
     margin-bottom: 20px;
-    width: auto;
     padding: 20px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px ;
     font-family: sans-serif;
-    box-shadow: 0px 0px 3px rgba(40, 82, 29, 0.616);
+    box-shadow: 0px 0px 3px var(--boxcolor1);
 }
 
 h3#first {
@@ -75,14 +84,14 @@ h3#first {
     margin-top: 0px;
     margin-bottom: 20px;
     font-size: 27px;
-    font-family: Idroid, sans-serif;
+    font-family: var(--Idroidfont);
 }
 
 section > h4 {
-    background-image: linear-gradient(to right, #87e187c3, white);
+    background-image: linear-gradient(to right, var(--color1), white);
     margin-bottom: 10px;
     font-size: 20px;
-    font-family: Idroid, sans-serif;
+    font-family: var(--Idroidfont);
 }
 
 section > p, main > p {
@@ -102,7 +111,7 @@ picture{
 
 /*footer----------------------------------------------------------------------------------------------------*/
 footer {
-    background-image: linear-gradient(to bottom, #2a8a3d,black,black,black, black);
+    background-image: linear-gradient(to bottom,var(--color3),black,black,black, black);
     border-top:1px solid black;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -126,7 +135,7 @@ div#social{
 }
 
 footer > div#content {
-    font-family: Idroid, sans-serif;
+    font-family: var(--Idroidfont);
     font-size: 10px;
     padding: 15px 0px 10px 0px;
 }
