--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -17,8 +17,7 @@
 body, p{
     margin: 0px;
     background-color: var(--color1);
-    max-width: 925px;
-    min-width: 450px;
+    line-height: 1.8em;
 }
 
 /*header----------------------------------------------------------------------------------------------------*/
@@ -36,6 +35,7 @@ header > h1 {
     text-align: center;
     font-family: var(--Idroidfont);
     font-size: 40px;
+    text-shadow: 2px 2px 0px var(--boxcolor1);
 }
 
 header > h2 {
@@ -44,6 +44,7 @@ header > h2 {
     text-align: center;
     font-family: sans-serif;
     font-size: 14px;
+    text-shadow: 1px 1px 1px var(--boxcolor1);
 }
 
 section > div {
@@ -70,7 +71,9 @@ section > div:hover{
 /*main----------------------------------------------------------------------------------------------------*/
 main {
     background-color: white;
-    
+    max-width: 925px;
+    min-width: 450px;
+    margin:auto;
     margin-bottom: 20px;
     padding: 20px;
     border-bottom-left-radius: 5px;
