--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -14,12 +14,24 @@
     --Idroidfont: Idroid, sans-serif;
 }
 
-body, p{
+body{
     margin: 0px;
     background-color: var(--color1);
     line-height: 1.8em;
 }
 
+p {
+    line-height: 1.8em;
+}
+
+.pexternal {
+    color: black;
+    background-color:var(--color1);
+}
+
+.pexternal:hover {
+    background-color:var(--color2);
+}
 /*header----------------------------------------------------------------------------------------------------*/
 header{
     border-bottom-right-radius: 5px;
@@ -97,7 +109,7 @@ section > h4 {
     font-family: var(--Idroidfont);
 }
 
-p {
+section > p, main > p {
     background-color: white;
 }
 
@@ -111,6 +123,19 @@ picture > img, picture > source{
 picture{
     text-align: center;
 }
+
+aside {
+    margin: 10px;
+    padding: 15px 15px 15px 15px;
+    background-color: var(--color1);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px black;
+}
+
+aside > p, aside > h3 {
+    margin: 0px;
+}
+
 
 /*footer----------------------------------------------------------------------------------------------------*/
 footer {
