--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -152,7 +152,7 @@ footer > div {
 }
 
 div#social{
-    padding-top: 30px;
+    padding-top: 35px;
     text-align: center;
 }
 
@@ -165,10 +165,11 @@ div#social{
 footer > div#content {
     font-family: var(--Idroidfont);
     font-size: 10px;
-    padding: 15px 0px 10px 0px;
+    padding: 0px 0px 10px 0px;
 }
 
-div#content > p{
+div#content > p, div#content > a{
     text-align: center;
-    background-color: black;
+    color: white;
+    text-decoration: solid;
 }
