--- a/source/c1/c1.css
+++ b/source/c1/c1.css
@@ -24,13 +24,17 @@ p {
     line-height: 1.8em;
 }
 
-.pexternal {
+a.pexternal {
     padding: 3px;
     color: black;
     background-color:var(--color1);
 }
 
-.pexternal:hover {
+a.pexternal::after {
+    content: '\00A0\🔗';
+}
+
+a.pexternal:hover {
     padding: 3px;
     background-color:var(--color2);
 }
@@ -148,14 +152,25 @@ img#holdhand {
 
 aside {
     margin: 10px;
-    padding: 15px 15px 15px 15px;
-    background-color: var(--color1);
+    padding: 7px 15px 15px 15px;
+    background-color: var(--color4);
     border-radius: 10px;
     box-shadow: 0px 0px 10px black;
 }
 
 aside > p, aside > h3 {
     margin: 0px;
+}
+
+aside > h3 {
+    font-size: 22px;
+    text-shadow: 2px 2px 4px var(--boxcolor1);
+}
+
+aside > ul {
+    list-style-type: '✔️ ';
+    list-style-position: inside; /* put the dots inside the div */
+    columns: 2;
 }
 
 
