--- a/source/c2/c2.css
+++ b/source/c2/c2.css
@@ -1,5 +1,55 @@
 @charset "UTF-8";
 
+:root{
+    --gray: gray;
+    --green: rgb(135, 206, 29);
+    --yellow: rgb(227, 227, 57);
+}
+
+*{
+    margin: 0;
+    padding:0;
+}
+
 body {
-    background-color: gray;
+    background-color: var(--gray);
+    margin: 30px;
+    font-size: 25px;
+}
+
+h1, h2, header > p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1{
+    font-size: 60px;
+}
+
+h2{
+    font-size: 50px;
+    padding-left: 50px;
+}
+
+header > p {
+    font-size: 20px;
+}
+
+a{
+    color: var(--green);
+}
+
+a:hover{
+    color: var(--yellow);
+}
+
+header{
+    margin-bottom: 20px;
+}
+
+main {
+    margin-bottom: 20px;
+}
+
+#site {
+    font-family: Arial, Helvetica, sans-serif;
 }
