--- a/source/c2/c2.css
+++ b/source/c2/c2.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+
+@font-face {
+    font-family: "PaytoneOne";
+    src: url("fonts/PaytoneOne.ttf");
+} ;
 
 :root{
     --gray: gray;
@@ -13,25 +19,22 @@
 
 body {
     background-color: var(--gray);
-    margin: 30px;
     font-size: 25px;
 }
 
-h1, h2, header > p{
+h1, h2{
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 h1{
     font-size: 60px;
+    font-family: PaytoneOne, Arial, Helvetica, sans-serif;
 }
 
 h2{
-    font-size: 50px;
-    padding-left: 50px;
-}
-
-header > p {
     font-size: 20px;
+    padding-left: 50px;
 }
 
 a{
@@ -43,11 +46,17 @@ a:hover{
 }
 
 header{
+    color: white;
     margin-bottom: 20px;
+    background-color: black;
 }
 
 main {
     margin-bottom: 20px;
+}
+
+section > pre  {
+    font-family: Kalam, Arial, sans-serif;
 }
 
 #site {
