--- a/source/c2/c2.css
+++ b/source/c2/c2.css
@@ -1,10 +1,9 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
-
 @font-face {
     font-family: "PaytoneOne";
-    src: url("fonts/PaytoneOne.ttf");
-} ;
+    src: url("fonts/PaytoneOne.ttf") format('truetype');
+}
 
 :root{
     --gray: gray;
@@ -61,4 +60,9 @@ section > pre  {
 
 #site {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+footer{
+    text-align: center;
+    margin-bottom: 20px;
 }
