--- a/source/c2/c2.css
+++ b/source/c2/c2.css
@@ -16,7 +16,8 @@
     padding:0;
 }
 
-body {
+html, body {
+    min-height: 100vh;
     background-color: var(--gray);
     font-size: 25px;
 }
@@ -56,6 +57,23 @@ main {
 
 section > pre  {
     font-family: Kalam, Arial, sans-serif;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
+section.normal {
+    background-color: aliceblue;
+}
+
+section.image {
+    background-color: aquamarine;
+}
+
+section.image > pre {
+    
 }
 
 #site {
