--- a/source/c2/c2.css
+++ b/source/c2/c2.css
@@ -6,7 +6,7 @@
 }
 
 :root{
-    --gray: gray;
+    --black: black;
     --green: rgb(135, 206, 29);
     --yellow: rgb(227, 227, 57);
 }
@@ -18,7 +18,7 @@
 
 html, body {
     min-height: 100vh;
-    background-color: var(--gray);
+    background-color: var(--black);
     font-size: 25px;
 }
 
@@ -48,7 +48,7 @@ a:hover{
 header{
     color: white;
     margin-bottom: 20px;
-    background-color: black;
+    background-color: var(--black);
 }
 
 main {
@@ -69,12 +69,27 @@ section.normal {
 }
 
 section.image {
+    box-shadow: inset 6px 6px 14px 0px rgba(0, 0, 0, 0.451);
     background-color: aquamarine;
+    color: white;
+    background-attachment: fixed;
+}
+
+section#img1 {
+    background-image: url('images/background001.jpg');
+    background-position: right center;
+}
+
+section#img2 {
+    background-image: url('images/background002.jpg');
+    background-position: center;
+    background-size: cover;
 }
 
 section.image > pre {
+    padding-top: 40px;
     background-color: rgba(0, 0, 0, 0.634);
-    width: 100px;
+    width: 400px;
 }
 
 #site {
@@ -82,6 +97,8 @@ section.image > pre {
 }
 
 footer{
+    font-size: 20px;
     text-align: center;
     margin-bottom: 20px;
+    color: white;
 }
